fixed project container on mobile for scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -425,6 +425,10 @@
      font-size: 1rem;
    }
 
+   .project-content {
+     height: initial;
+   }
+
    .project-content .container {
      flex-flow: column;
    }
